fixed line spacing in firefox

--- a/master.css
+++ b/master.css
@@ -23,6 +23,10 @@ p{
     line-height: 150%;
 }
 
+div{
+    line-height: 130%;
+}
+
 h2{
 font-size: 20px;
 line-height: 140%;
@@ -34,12 +38,13 @@ h3{
 }
 
 body{
-    font-family: objektiv-mk2, sans-serif;
+    font-family: objektiv-mk2, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-weight: 300;
     font-style: normal;
     padding: 0px;
     margin: 0px;
-    line-height: 130% im !important;
+    line-height: 130% !important;
+    scroll-behavior: smooth !important;
 }
 .bg-container{
     position: fixed;
